# nonebot-desktop-tk

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
nonebot_desktop/: __main__.py  exops.py  gui.py  res.py  res.pyi
packaging/: build-cp310-amd64.nsi
src/nonebot_desktop_tk/: __main__.py  gui.py
