[project]
name = "nonebot-desktop-tk"
version = "1.0.6"
description = "NoneBot2 GUI manager written with tkinter."
authors = [
    {name = "HivertMoZara", email = "worldmozara@163.com"},
]
license = {text = "MIT"}
dependencies = ["tkreform>=0.3.6", "nonebot-desktop-wing>=0.2.8"]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/nonedesktop/nonebot-desktop-tk"
Repository = "https://github.com/nonedesktop/nonebot-desktop-tk"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
